fix text-align

--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -64,5 +64,6 @@ html, body, .container{
   margin: 20px auto;
   width: 800px;
   color: #ed4014;
+  text-align: center;
 }
 
